# zephyr_bist

./: Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig.sysbuild  sysbuild.cmake
app/boards/: esp32c6_devkitc_hpcore.overlay
app/remote/: CMakeLists.txt  Kconfig  prj.conf
app/remote/src/: main.c
zephyr/: module.yml
